# zUID

./: README  README.md  configure.ac
src/: Makefile.am  zuid  zuid.c
